完善接口功能
* feat: P2d Task 8 — replace mock claims with real data or honest empty states

CircleDetailPage: use circleService.posts for pinned, topicService.hot for
topics, EmptyState for activity feed. SearchPage: show honest empty state
for unsupported tabs (用户/话题/圈子). CollectionsPage: use real favorites
for recent items, EmptyState for folder categories, real counts for stats.
ROADMAP: add 进行中 section for partially-implemented features.

* chore: P2d Task 9 — verification pass (lint/test/build/backend all green)

Frontend: ESLint 0, Vitest 16/16 pass, tsc+vite build success.
Backend: mvn test 20/20 pass (JUnit 5 + Surefire).
Mock audit: remaining placeholders are documented in ROADMAP (DM, OAuth,
SMS, image upload, create circle, MOCK_TRENDING/MOCK_DRAFTS/MOCK_CIRCLES).

* docs: mark Tasks 8-9 steps as complete in completion-gap-fix plan

* feat: P3 — wire real data into PostDetail, Profile, FollowList sidebars

Backend:
- FeedItemResponse: add publishTime (Instant) field; update all 3 callsites
  in KnowPostFeedServiceImpl and FeedCacheInvalidationListener

Frontend Phase 1:
- FeedItem type: add publishTime field
- HomePage FeedCard: replace empty authorId subtitle with
  formatRelativeTime(publishTime) + first tagJson entry
- SearchPage: add 搜索建议 tag-pill panel; fix individual history X-button deletion
- NotificationPage: add 你可能感兴趣的人 static widget

Frontend Phase 2–3:
- PostDetailPage: article header shows authorRole + publishTime subtitle and
  inline follow button; PostRightRail fetches real author counters, real
  relation status with functional follow/unfollow, real hot topics from API,
  real related posts from topicService by first tag
- ProfilePage RightSidebar: render real profile fields (roleTitle, school,
  birthday) instead of hardcoded strings; 编辑资料 only shown on own profile
- FollowListPage: 关注统计 uses real counters from relationService; 可能认识的人
  uses real recommendService.users() with verified badge and follow toggle

* fix: backend bugs + frontend C